--- a/uiux_index.html
+++ b/uiux_index.html
@@ -697,7 +697,7 @@
                             <div>
                                 <div class="info_skill_item_title h5 font_bold">After effects</div>
                                 <div class="info_skill_item_text">
-                                     可展示產品原型的介面動態效果。
+                                    可展示產品原型的介面動態效果。
                                 </div>
                                 <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
                                 <div class="info_skill_item_pic">
@@ -1916,7 +1916,7 @@
 
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">永豐銀行&nbsp;網路投保網站</div>
-                        <div class="work_info_text">
+                        <div class="work_info_text" style="display:none;">
                             <ul>
                                 <li>具調查市場觀念，作為網站內容基礎。</li>
                                 <li>能盤點網站資料來源、互動機制、頁面布局。</li>
@@ -1929,22 +1929,22 @@
                                 <li>彙整易用性測試報告，並提供行動建議。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">從產品需求規劃到交付產品前端原型，具有深度的專案執行力。</div>
+                        <div class="work_info_text" style="font-size:18px;padding-left:0px;">從產品需求規劃到交付產品前端原型，具有深度的專案執行力。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">元大期貨&nbsp;槓桿交易商官網</div>
-                        <div class="work_info_text">
+                        <div class="work_info_text" style="display:none;">
                             <ul>
                                 <li>了解官方網站，版型製作要點。</li>
                                 <li>針對產業類型與品牌訴求，規劃視覺風格。</li>
                                 <li>掌握版型和風格，交付介面設計稿。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">與兩家上市企業設計部門競爭標案，介面和視覺提案勝出得標。</div>
+                        <div class="work_info_text" style="font-size:18px;padding-left:0px;">與兩家上市企業設計部門競爭標案，介面和視覺提案勝出得標。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">裕隆集團&nbsp;2B員工APP&amp;管理後台</div>
-                        <div class="work_info_text">
+                        <div class="work_info_text" style="display:none;">
                             <ul>
                                 <li>緊密訪談客戶相關單位，作為產品規劃基礎。</li>
                                 <li>能盤點產品資料來源、互動機制、頁面布局。</li>
@@ -1955,11 +1955,11 @@
                                 <li>貼合產品開發，提供介面樣式庫文件。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">定義2B產品核心強化使用價值，規劃內容切合業務需求，完成介面設計原型。</div>
+                        <div class="work_info_text" style="font-size:18px;padding-left:0px;">定義2B產品核心強化使用價值，規劃內容切合業務需求，完成介面設計原型。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">金融服務商&nbsp;投資交易APP</div>
-                        <div class="work_info_text">
+                        <div class="work_info_text" style="display:none;">
                             <ul>
                                 <li>以使用者為出發，發想產品核心概念。</li>
                                 <li>優化產品營運為訴求，分析並提出觀點。</li>
@@ -1969,11 +1969,11 @@
                                 <li>運用UX原則，進行介面設計。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">分析使用者旅程，以提升產品營利循環為規劃內容，完成介面設計原型。</div>
+                        <div class="work_info_text" style="font-size:18px;padding-left:0px;">分析使用者旅程，以提升產品營利循環為規劃內容，完成介面設計原型。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">泰安產物&nbsp;活動網頁</div>
-                        <div class="work_info_text">
+                        <div class="work_info_text" style="display:none;">
                             <ul>
                                 <li>熟悉一頁式行銷網頁，版型製作要點。</li>
                                 <li>針對行銷主題類型，規劃視覺風格。</li>
@@ -1982,11 +1982,11 @@
                                 <li>擁有行銷接觸點、GA、GTM觀念。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">根據行銷人員規劃，完成符合形象之網頁前端原型，並討論行銷接觸點和GA、GTM設置。</div>
+                        <div class="work_info_text" style="font-size:18px;padding-left:0px;">根據行銷人員規劃，完成符合形象之網頁前端原型，並討論行銷接觸點和GA、GTM設置。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">Oloo共享交通&nbsp;UXR市場研究</div>
-                        <div class="work_info_text">
+                        <div class="work_info_text" style="display:none;">
                             <ul>
                                 <li>根據UXR研究目標，進行桌面研究並收斂出研究議題。</li>
                                 <li>設計招募受訪者問卷，掌握訪綱要點並有效完成訪談行動。</li>
@@ -1995,7 +1995,7 @@
                                 <li>了解「發表用簡報」架構要素，以圖文鋪陳故事性，呈現簡明易懂且具吸引力之內容。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">完整且深度之UXR研究案實作，論述商業價值之研究洞見並獲得業主肯定。</div>
+                        <div class="work_info_text" style="font-size:18px;padding-left:0px;">完整且深度之UXR研究案實作，論述商業價值之研究洞見並獲得業主肯定。</div>
                     </div>
                 </div>
 
@@ -2044,9 +2044,10 @@
                             </div>
                             <div class="work_info_part" style="margin-bottom:0px;">
                                 <div class="work_info_subpart">
-                                    <div class="work_info_subtitle h4 font_bold" style="margin-bottom:10px;padding-left:15px;">
-                                        工作相關
+                                    <div class="work_info_subtitle h4 font_bold" style="margin-bottom:0px;padding-left:15px;">
+                                        王俊淵&nbsp;Joe
                                     </div>
+                                    <div class="work_info_subtext font_bold" style="margin-bottom:15px;padding-left:15px;">UI.UX設計師 ‧ 產品規劃到維運迭代</div>
                                     <div class="work_info_subtext" style="padding-left:17px;">
                                         <ul>
                                             <li>手機號碼：0927-821-279</li>
@@ -2059,7 +2060,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="work_info_subpart">
+                                <div class="work_info_subpart" style="display:none;">
                                     <div class="work_info_subtitle h4 font_bold" style="padding-left:15px;">
                                         回饋和建議
                                     </div>
