--- a/oloo_works_2.html
+++ b/oloo_works_2.html
@@ -84,7 +84,7 @@
 
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_1"><a href="#oloo_tab_1" class="set_middle"><span>拆解議題</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_2"><a href="#oloo_tab_2" class="set_middle"><span>訪談準備</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_2"><a href="#oloo_tab_2" class="set_middle"><span>招募受訪者</span></a></div>
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_3"><a href="#oloo_tab_3" class="set_middle"><span>訪談行動</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
@@ -182,40 +182,38 @@
                         </div>
                     </div>
                 </div>
-                <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
-                    <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">規劃訪談大綱</div>
-                        <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">以部分內容為例&nbsp;(個人負責編寫)</div>
-                        <div class="pup_content_pic">
-                            <picture>
-                                <img src="images/oloo_pic_3-4.png" style="max-width:100%;">
-                            </picture>
-                        </div>
-                        <div class="pup_window_content_end_tip_container">
-                            <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">UXR市場研究案&nbsp;訪談準備</span></span>
-                        </div>
-                        <div class="pup_window_content_next_tip pup_tab_btn oloo_pup_tab_btn_3">接續瀏覽<a href="#oloo_tab_3">訪談行動</a></div>
-                        <script>
-                            $(document).ready(function() {
-                                $(".oloo_pup_tab_btn_3").click(function() {
-                                    $(".oloo_pup_tab_2").removeClass("active");
-                                    $(".oloo_pup_tab_3").addClass("active");
-                                });
-                            });
-
-                        </script>
-                    </div>
+                <div class="pup_window_content_end_tip_container">
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">UXR市場研究案&nbsp;訪談準備</span></span>
                 </div>
+                <div class="pup_window_content_next_tip pup_tab_btn oloo_pup_tab_btn_3">接續瀏覽<a href="#oloo_tab_3">訪談行動</a></div>
+                <script>
+                    $(document).ready(function() {
+                        $(".oloo_pup_tab_btn_3").click(function() {
+                            $(".oloo_pup_tab_2").removeClass("active");
+                            $(".oloo_pup_tab_3").addClass("active");
+                        });
+                    });
 
-
+                </script>
 
             </div>
             <div id="oloo_tab_3" class="pup_window_tab_content">
+                <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
+                    <div class="pup_content">
+                        <div class="part_title h5 font_bold emphasize_text">規劃訪談大綱</div>
+                        <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">以個人編寫內容為例&nbsp;</div>
+                        <div class="pup_content_pic">
+                            <picture>
+                                <img src="images/oloo_pic_3-4.png" style="width:100%;max-width:1000px;">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;padding-left:0px;">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">說明</div>
+                                <div class="part_title h5 font_bold emphasize_text">執行訪談</div>
                                 <div class="pup_text large_text">
                                     成員互相配置主訪員、副訪員，事前進行模擬訪談培養默契，並確保成果能關聯貼合研究議題；<br />
                                     實際訪談中，須牢記研究目標適時追問或拉回至研究目標，保持虛心、好奇心尊重受訪者的發言，只詢問表示興趣不給予任何評價。
@@ -237,12 +235,12 @@
                         <div class="pup_normal_text_small" style="margin-top:20px;margin-bottom:5px;">訪談錄影截圖</div>
                         <div class="pup_content_pic">
                             <picture>
-                                <img src="images/oloo_pic_3-5.jpg" style="max-width:100%">
+                                <img src="images/oloo_pic_3-5.jpg" style="width:100%;max-width:600px;">
                             </picture>
                         </div>
                         <div class="pup_content_pic" style="margin-top:10px;">
                             <picture>
-                                <img src="images/oloo_pic_3-6.jpg" style="max-width:100%">
+                                <img src="images/oloo_pic_3-6.jpg" style="width:100%;max-width:600px;">
                             </picture>
                         </div>
                         <div class="pup_window_content_end_tip_container">
