--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1214,7 +1214,7 @@
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>網站視覺提案
                             </div>
                             <div class="work_info_subtext">
-                                我方公司與<span class="font_bold">兩家上市企業的設計部門競爭提案</span>，個人分析客戶營業屬性，發想製作兩款介面風格，設計符合客戶的期待並<span class="font_bold">取得標案</span>。
+                                我方公司與<span class="font_bold">兩家設計公司競爭提案</span>，個人分析客戶營業屬性，發想製作兩款介面風格，設計符合客戶的期待並<span class="font_bold">取得標案</span>。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
@@ -1760,7 +1760,7 @@
                                     <span class="font_bold">萃取假設</span><span style="display:none;"><br />
                                         將各自假設推演論述，<span class="font_bold">收斂出商業機會和風險</span>；<br />利用機會句型：「相信...因此有好的結果。」、風險句型：「如果...可能有不好的結果。」輔助論述。</span>
                                 </li>
-                                <li style="margin-top:10px;">
+                                <li style="margin-top:10px;" style="display:none;">
                                     <span class="font_bold">篩選假設</span><span style="display:none;"><br />
                                         成員交互驗證各自的商業機會、風險，根據「已知、未知」和「商業價值高、低」以十字量表分類排序出<span class="font_bold">具「未知」和「高商業價值」</span>之機會和風險。</span>
                                 </li>
@@ -1776,7 +1776,7 @@
                             </div>
                         </div>
                         <div id="p13_title-2" class="work_info_text" style="margin-bottom:30px;">
-                            <span class="work_info_text_p font_bold">二、訪談行動</span>
+                            <span class="work_info_text_p font_bold">二、目標客群訪談</span>
                             <div class="work_info_subtext" style="padding-left:0px;">執行以下步驟：</div>
                             <ul style="list-style: decimal;padding-left:5px;">
                                 <li style="margin-top:10px;">
@@ -1786,7 +1786,7 @@
                                         定義次要面向的指標，如：同行者有類型、人數、共同目的、移動方式。</span>
                                 </li>
                                 <li style="margin-top:10px;">
-                                    <span class="font_bold">制定招募受訪問卷</span><span style="display:none;"><br />
+                                    <span class="font_bold">招募受訪者</span><span style="display:none;"><br />
                                         根據<span class="font_bold">議題重要面向設定招募條件</span>，如：同行者則招募條件為「有與他人一起逛展的經驗」；<br />
                                         並制定招募問卷內容，問題從<span class="font_bold">概念方向→明確具篩選性→開放式了解細節</span>為設計原則。</span>
                                 </li>
@@ -1808,7 +1808,7 @@
                         </div>
 
                         <div id="p13_title-3" class="work_info_text" style="margin-bottom:30px;">
-                            <span class="work_info_text_p font_bold">三、研究呈現</span>
+                            <span class="work_info_text_p font_bold">三、研究成果</span>
                             <div class="work_info_subtext" style="padding-left:0px;">執行以下步驟：</div>
                             <ul style="list-style: decimal;padding-left:5px;">
                                 <li style="margin-top:10px;">
@@ -1825,7 +1825,7 @@
                                         探討各<span class="font_bold">詮釋中共同的痛點、需求</span>，讓已知事情有新的認識、補充細節，讓未知事情被注意和認知，最後形成研究洞見<span class="font_bold">啟發成商業機會、風險。</span></span>
                                 </li>
                                 <li style="margin-top:10px;">
-                                    <span class="font_bold">完成研究呈現</span><span style="display:none;"><br />
+                                    <span class="font_bold">研究發表</span><span style="display:none;"><br />
                                         根據研究目標和預期為方向，呈現研究洞見作為成果發表，以「<span class="font_bold">描述洞見內容→資料來源和證明根據→結論和行動建議」</span>為架構，鋪陳成果作為簡報內容。</span>
                                 </li>
                             </ul>
@@ -1837,7 +1837,7 @@
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span id="Oloo_report_pdf"><a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view?usp=drive_link" target="_blank">簡報內容.pdf&nbsp;(可公開部分)</a></span>
                                 </div>
                             </div>
-                            <div class="pup_link_area" style="margin-top:10px;">
+                            <div class="pup_link_area" style="margin-top:10px;display:none;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="Oloo_works_4.html">專案個人亮點</a></span>
@@ -1940,7 +1940,7 @@
                                 <li>掌握版型和風格，交付介面設計稿。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text" style="font-size:18px;padding-left:0px;">與兩家上市企業設計部門競爭標案，介面和視覺提案勝出得標。</div>
+                        <div class="work_info_text" style="font-size:18px;padding-left:0px;">與兩家設計公司競爭標案，網站視覺提案勝出得標。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">裕隆集團&nbsp;2B員工APP&amp;管理後台</div>
