--- a/uiux_index.html
+++ b/uiux_index.html
@@ -279,7 +279,7 @@
                     <div id="p8_menu"><a href="#p8">元大期貨&nbsp;槓桿交易商官網</a></div>
                     <div id="p9_menu"><a href="#p9">裕隆集團&nbsp;2B員工APP&amp;管理後台</a></div>
                     <div id="p10_menu"><a href="#p10">金融服務商&nbsp;投資交易APP</a></div>
-                    <div id="p11_menu"><a href="#p11">泰安產物&nbsp;產品行銷專案</a></div>
+                    <div id="p11_menu"><a href="#p11">泰安產物&nbsp;商品行銷、網站維運</a></div>
                 </div>
             </div>
             <div class="page_list_item">
@@ -396,7 +396,7 @@
                                 <div class="list_note_tag" style="color:#232323;">2C產品提案(強化營利循環)&nbsp;→&nbsp;介面設計</div>
                             </div>
                             <li>
-                                <div class="list_page_name">泰安產物&nbsp;行銷活動網頁</div>
+                                <div class="list_page_name">泰安產物&nbsp;商品行銷、網站維運</div>
                                 <div class="list_line"></div><a id="p11_list" href="#p11" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">11</a>
                             </li>
                             <div class="list_note_container">
@@ -1568,14 +1568,14 @@
             </div>
             <div class="page_content_container">
                 <div class="page_content_title">
-                    <div class="page_content_title_name">泰安產物&nbsp;產品行銷專案</div>
+                    <div class="page_content_title_name">泰安產物&nbsp;商品行銷、維運事務</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
                 <div class="work_info_container">
 
                     <div class="work_info_part">
-                        <div class="work_info_title h3 font_bold">專案介紹</div>
+                        <div class="work_info_title h3 font_bold">行銷專案</div>
                         <div class="work_info_text">
                             暑期推廣旅平險商品，以旅遊主題製作網頁提供抽獎活動和旅平險資訊，<span class="font_bold">定義目標客群作為視覺風格依據</span>，能有效率提升投保意願。
                         </div>
@@ -1583,7 +1583,7 @@
                             <picture>
                                 <source media="(max-width:540px)" srcset="images/project_img_7_540.png" />
                                 <source media="(max-width:1024px)" srcset="images/project_img_7_1024.png" />
-                                <img src="images/project_img_7.png" class="project_img" alt="泰安產物 產品行銷專案示意圖">
+                                <img src="images/project_img_7.png" class="project_img" alt="泰安產物 商品行銷專案示意圖">
                             </picture>
                         </div>
                     </div>
@@ -1972,7 +1972,7 @@
                         <div class="work_info_text" style="font-size:18px;padding-left:0px;">分析使用者旅程，以提升產品營利循環為規劃內容，完成介面設計原型。</div>
                     </div>
                     <div class="work_info_part">
-                        <div class="work_info_title h3 font_bold">泰安產物&nbsp;活動網頁</div>
+                        <div class="work_info_title h3 font_bold">泰安產物&nbsp;商品行銷網頁</div>
                         <div class="work_info_text" style="display:none;">
                             <ul>
                                 <li>熟悉一頁式行銷網頁，版型製作要點。</li>
