--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1568,7 +1568,7 @@
             </div>
             <div class="page_content_container">
                 <div class="page_content_title">
-                    <div class="page_content_title_name">泰安產物&nbsp;商品行銷、維運事務</div>
+                    <div class="page_content_title_name">泰安產物&nbsp;行銷和維運事務</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
@@ -1589,7 +1589,7 @@
                     </div>
 
                     <div id="p11_title" class="work_info_part" style="margin-bottom:0px;">
-                        <div class="work_info_title h3 font_bold">工作涵蓋範圍</div>
+                        <div class="work_info_title h3 font_bold" style="display:none;">工作涵蓋範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>視覺設計稿<span>Mockups</span>
@@ -1622,13 +1622,13 @@
                                 有SEO觀念和行銷人員討論行銷接觸點、關鍵字定義，並設置GA和GTM追蹤事件。
                             </div>
                         </div>
-                        <div class="work_info_title h3 font_bold">官網維運</div>
+                        <div class="work_info_title h3 font_bold" style="margin-top:50px;">官網維運</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>工作描述
                             </div>
                             <div class="work_info_subtext">
-                                維運泰安產物投保網站(3年)，主要負責定義視覺風格、優化投保流程和介面設計，<br />並參與製作B2B企業投保管理後台。
+                                維運泰安產物投保網站(3年)，主要負責定義視覺風格、製作商品頁面、優化投保流程和介面設計，<br />並參與製作B2B企業投保管理後台。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
