--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1345,6 +1345,10 @@
                                         </div>
                                         <div style="margin-top:10px;">
                                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                                <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
+                                                <span><a href="yulon_works_6.html">檢核需求規劃</a></span>
+                                            </div>
+                                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                                 <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
                                                 <span><a href="yulon_works_5.html">產品設計亮點</a></span>
@@ -1389,6 +1393,10 @@
                                     <span><a href="yulon_works_4.html">2B後台設計稿</a></span>
                                 </div>
                                 <div style="margin-top:10px;">
+                                    <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                        <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
+                                        <span><a href="yulon_works_6.html">需求檢核</a></span>
+                                    </div>
                                     <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                         <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                         <img src="images/pup_link_dot.png" class="pup_link_dot">
