--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1346,7 +1346,7 @@
                                         <div style="margin-top:10px;">
                                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                                 <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
-                                                <span><a href="yulon_works_6.html">檢核需求規劃</a></span>
+                                                <span><a href="yulon_works_6.html">產品需求檢核</a></span>
                                             </div>
                                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                                 <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
@@ -1395,7 +1395,7 @@
                                 <div style="margin-top:10px;">
                                     <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                         <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
-                                        <span><a href="yulon_works_6.html">需求檢核</a></span>
+                                        <span><a href="yulon_works_6.html">產品需求檢核</a></span>
                                     </div>
                                     <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                         <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
