--- a/uiux_index.html
+++ b/uiux_index.html
@@ -2301,6 +2301,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="pup_window_content_next_tip" style="text-align:center;margin-top:20px;"><a href="website/taian_b2b_fire/page_plan-s1.html" target="_blank">前端切版原型</a></div>
                             <div class="pup_text large_text" style="margin-top:20px;text-align:center;font-size:16px;">涉及商業相關業務邏輯資料，僅單頁展示於作品集。</div>
                         </div>
 
