--- a/gapp_works_2-r.html
+++ b/gapp_works_2-r.html
@@ -74,16 +74,11 @@
 <body class="body_page gapp_works_2_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">投資交易APP&nbsp;設計稿</div>
-            <a href="uiux_index.html#p10_title">
-                <div class="page_back_btn">
-                    回作品集<img src="images/arrow-left-link.png" alt="">
-                </div>
-            </a>
+            <div class="h4 font_bold">投資交易APP&nbsp;介面設計稿</div>
         </div>
 
             <div class="pup_window_content_tab_container">
-                <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#gapp_tab_3" class="set_middle"><span>IOS</span></a></div>
+                <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#gapp_tab_3" class="set_middle"><span>iOS</span></a></div>
                 <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#gapp_tab_4" class="set_middle"><span>Android</span></a></div>
             </div>
             <div class="pup_window_tab_content_container">
