--- a/illustrator_works-r.html
+++ b/illustrator_works-r.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="網站&APP產品規劃與視覺設計">
 
     <link rel="shoutcut icon" href="images/favicon-jw.ico" />
-    <title>Joe Wang UI.UX作品集</title>
+    <title>Illustrator相關作品</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -74,7 +74,7 @@
 <body class="body_page illustrator_works_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">Illustrator相關作品</div>
+            <div class="h4 font_bold" style="margin-bottom:10px;">Illustrator相關作品</div>
         </div>
         <div class="pup_window_content_scroll">
             <div class="pup_window_content_part">
