--- a/uiux_report.html
+++ b/uiux_report.html
@@ -219,7 +219,7 @@
                     <img src="images_report/page_content_img-4-4.png" alt="金融商品投資APP-產品頁面架構">
                 </picture>
                 <div class="btn_container">
-                    <a href="#" target="_blank" class="hvr-top-l">
+                    <a href="gapp_works_1-r.html" target="_blank" class="hvr-top-l">
                         <div class="line_btn_large appear-animation" data-appear-animation="fadeInUp">
                             <div>
                                 <div>點擊瀏覽&nbsp;更多前期規劃</div>
@@ -235,7 +235,7 @@
                     <img src="images_report/page_content_img-4-5.png" alt="金融商品投資APP-介面設計稿">
                 </picture>
                 <div class="btn_container">
-                    <a href="#" target="_blank" class="hvr-top-l">
+                    <a href="gapp_works_2-r.html" target="_blank" class="hvr-top-l">
                         <div class="line_btn_large appear-animation" data-appear-animation="fadeInUp">
                             <div>
                                 <div>點擊瀏覽&nbsp;更多介面設計稿</div>
