--- a/gapp_works_2-r.html
+++ b/gapp_works_2-r.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="網站&APP產品規劃與視覺設計">
 
     <link rel="shoutcut icon" href="images/favicon-jw.ico" />
-    <title>Joe Wang UI.UX作品集</title>
+    <title>投資交易APP-介面設計稿</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
@@ -74,7 +74,7 @@
 <body class="body_page gapp_works_2_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">投資交易APP&nbsp;介面設計稿</div>
+            <div class="h4 font_bold" style="margin-bottom:10px;">投資交易APP&nbsp;介面設計稿</div>
         </div>
 
             <div class="pup_window_content_tab_container">
