--- a/uiux_report.html
+++ b/uiux_report.html
@@ -252,6 +252,57 @@
         </div>
     </div>
 
+    <div class="page_title">
+        <div class="page_num_infor">
+            第7頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+        </div>
+        <div class="work_title_img_container set_middle appear-animation" data-appear-animation="fadeInUp">
+            <picture>
+                <img src="images_report/page_title_img-4.png" alt="產品開發能力-永豐銀行保險代理網站、裕隆員工APP和管理後台">
+            </picture>
+        </div>
+        <div class="page_bottom_bar"></div>
+    </div>
+
+    <div class="page_container">
+        <div class="page_num_infor">
+            第8頁&nbsp;｜&nbsp;<span class="sub_infor">作品集簡報&nbsp;‧&nbsp;共12頁</span>
+        </div>
+        <div class="page_content">
+            <div class="page_content_title">
+                <div class="page_content_title_name"><img src="images_report/page_content_title-5.png" alt="永豐銀行保險代理網站-將業務需求轉化2C數位產品"></div>
+                <div class="page_content_title_line"></div>
+            </div>
+            <div class="page_content_img">
+                <picture>
+                    <img src="images_report/page_content_img-5-1.png" alt="永豐銀行保險代理網站-專案介紹">
+                </picture>
+            </div>
+            <div class="page_dashed_line"></div>
+            <div class="page_content_img">
+                <picture>
+                    <img src="images_report/page_content_img-5-2.png" alt="永豐銀行保險代理網站-網站面向">
+                </picture>
+            </div>
+            <div class="page_dashed_line"></div>
+            <div class="page_content_img">
+                <picture>
+                    <img src="images_report/page_content_img-5-3.png" alt="永豐銀行保險代理網站-資訊架構">
+                </picture>
+            </div>
+            <div class="page_dashed_line"></div>
+            <div class="page_content_img">
+                <picture>
+                    <img src="images_report/page_content_img-5-4.png" alt="永豐銀行保險代理網站-頁面布局">
+                </picture>
+            </div>
+        </div>
+        <div class="page_bottom_bar">
+            <span class="page_num">04</span>
+            <span class="page_name">永豐銀行保險代理網站</span>
+        </div>
+    </div>
+
 </body>
 
 
